# Distributed_systems

./: .gitignore
report/: main.ipynb
task1/: CMakeLists.txt  main.c  start.sh
task2/: CMakeLists.txt  mpi_sor_3d.c  mpi_sor_3d_upgraded.c  start.sh  start_docker.sh
